[gd_scene load_steps=6 format=2]

[ext_resource path="res://MiscRelated/GUIControlsRelated/PlayerGUI_HOptionSelector/Assets/PlayerGUI_HOptionSelector_LeftArrowButton_Normal.png" type="Texture" id=1]
[ext_resource path="res://MiscRelated/GUIControlsRelated/PlayerGUI_HOptionSelector/Assets/PlayerGUI_HOptionSelector_LeftArrowButton_Hovered.png" type="Texture" id=2]
[ext_resource path="res://MiscRelated/GUIControlsRelated/PlayerGUI_HOptionSelector/Assets/PlayerGUI_HOptionSelector_LeftArrowButton_Disabled.png" type="Texture" id=3]
[ext_resource path="res://MiscRelated/GUIControlsRelated/PlayerGUI_HOptionSelector/PlayerGUI_HOptionSelector.gd" type="Script" id=4]
[ext_resource path="res://MiscRelated/FontRelated/FontRes/monogram_32.tres" type="DynamicFont" id=5]

[node name="PlayerGUI_HOptionSelector" type="MarginContainer"]
margin_right = 71.0
margin_bottom = 32.0
mouse_filter = 2
script = ExtResource( 4 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 144.0
margin_bottom = 32.0
mouse_filter = 2
size_flags_horizontal = 3
custom_constants/separation = 20

[node name="LeftButton" type="TextureButton" parent="HBoxContainer"]
margin_right = 22.0
margin_bottom = 32.0
focus_mode = 0
size_flags_horizontal = 2
size_flags_vertical = 6
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 3 )

[node name="LabelMarginer" type="MarginContainer" parent="HBoxContainer"]
margin_left = 42.0
margin_right = 102.0
margin_bottom = 32.0
mouse_filter = 2
size_flags_horizontal = 6
custom_constants/margin_top = 3

[node name="Label" type="Label" parent="HBoxContainer/LabelMarginer"]
margin_top = 6.0
margin_right = 60.0
margin_bottom = 28.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_fonts/font = ExtResource( 5 )
text = "Value"
align = 1
valign = 1

[node name="RightButton" type="TextureButton" parent="HBoxContainer"]
margin_left = 122.0
margin_right = 144.0
margin_bottom = 32.0
size_flags_horizontal = 10
size_flags_vertical = 6
texture_normal = ExtResource( 1 )
texture_hover = ExtResource( 2 )
texture_disabled = ExtResource( 3 )
flip_h = true

[connection signal="pressed" from="HBoxContainer/LeftButton" to="." method="_on_LeftButton_pressed"]
[connection signal="pressed" from="HBoxContainer/RightButton" to="." method="_on_RightButton_pressed"]
